--- a/PLAYGROUND/client/src/styles/query.css
+++ b/PLAYGROUND/client/src/styles/query.css
@@ -1,4 +1,5 @@
 .query {
-  background-color: blanchedalmond;
-  width: 48%;
+  background-color: #282b30;
+  width: 45%;
+  border-radius: 10px;
 }
