--- a/PLAYGROUND/client/src/styles/req.css
+++ b/PLAYGROUND/client/src/styles/req.css
@@ -1,9 +1,15 @@
 .request {
-  padding: 10px;
+  padding: 5px 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: #282b30;
+  border-radius: 10px;
 }
 
 .request textarea {
   padding: 20px;
+  background-color: #282b30;
+  border-radius: 10px;
 }
 
 /* #req-var {
@@ -12,4 +18,5 @@
 
 .request span {
   font-size: 1.1rem;
+  background-color: #282b30;
 }
