--- a/PLAYGROUND/client/src/styles/index.css
+++ b/PLAYGROUND/client/src/styles/index.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  background-color: #1e2124;
+  background-color: #121921;
   color: aliceblue;
   font-family: "Poppins", sans-serif;
 }
