--- a/PLAYGROUND/client/src/styles/metrics.css
+++ b/PLAYGROUND/client/src/styles/metrics.css
@@ -1,5 +1,5 @@
 .metrics {
-  background: #282b30;
+  background: #16222f;
   border-radius: 10px;
   padding: 10px;
   display: flex;
@@ -7,10 +7,11 @@
 }
 
 .metric {
-  background: #36393e;
+  background: #16222f;
   border-radius: 10px;
   padding: 45px;
   width: 200px;
+  border: 1px white solid;
 }
 
 .metric-span {
