--- a/PLAYGROUND/client/src/styles/req.css
+++ b/PLAYGROUND/client/src/styles/req.css
@@ -2,13 +2,13 @@
   padding: 5px 20px;
   display: flex;
   flex-direction: column;
-  background-color: #282b30;
+  background-color: #16222f;
   border-radius: 10px;
 }
 
 .request textarea {
   padding: 20px;
-  background-color: #282b30;
+  background-color: #16222f;
   border-radius: 10px;
 }
 
@@ -18,5 +18,38 @@
 
 .request span {
   font-size: 1.1rem;
-  background-color: #282b30;
+  background-color: #16222f;
+}
+
+.jj {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #16222f;
+}
+
+/* .button {
+  background-color: #16222f;
+  border-radius: 10px;
+  
+} */
+
+.jj button {
+  display: inline-block;
+  padding: 0.3em 1.2em;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-weight: 300;
+  color: #ffffff;
+  background-color: #c69c07;
+  text-align: center;
+  transition: all 0.2s;
+  border: none;
+}
+
+.jj button:hover {
+  cursor: pointer;
+  background-color: #4095c6;
 }
