--- a/PLAYGROUND/client/src/styles/presetdropdown.css
+++ b/PLAYGROUND/client/src/styles/presetdropdown.css
@@ -1,5 +1,5 @@
 .auth {
-  width: 30%;
+  width: 20%;
   background: #16222f;
   align-items: center;
   padding: 5px 10px;
@@ -20,8 +20,13 @@
     brightness(118%) contrast(100%); */
 }
 
+#level {
+  font-size: 0.9rem;
+}
+
 .auth span {
   background-color: #16222f;
+  font-size: 0.75rem;
 }
 
 .dropdown {
@@ -35,6 +40,23 @@
   cursor: pointer;
 }
 
+.dd-menu {
+  position: absolute;
+  top: 155px;
+  left: 30px;
+  background-color: #16222f;
+  padding: 10px;
+  border: 0.5px solid white;
+  width: 10%;
+}
+
 .dd-menu li {
   list-style: none;
+  background: #16222f;
+  padding: 10px;
+}
+
+.dd-menu li:hover {
+  border: 1px solid rgb(1, 210, 1);
+  border-radius: 10px;
 }
